Introduced a workflow wrapper, so the workflow is well defined for a given goal. This means that each action is checkable, executable and cleanable. Ensure that upgrading teachus works correct, even if there is no direct access to the mysql server (use a tunnel). Configure the smtp server.
git-svn-id: http://svn.teachus.dk/dk.teachus/trunk@453 9534b298-6716-0410-9c14-e4ca5a2019ab